[package]
name = "node-noise"
version = "0.1.0"
authors = ["Damien Katz <me@damienkatz.com>"]
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "node_noise"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.13"

[dependencies]
neon = "0.1.13"
noise_search = "0.5.0"
unix_socket = "0.5.0"
lazy_static = "0.2.4"
